manifests/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uat-frontend
  namespace: my-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: uat-frontend
  template:
    metadata:
      labels:
        app: uat-frontend
    spec:
      imagePullSecrets:
        - name: ecr-regcred
      containers:
      - name: frontend
        image: 980921740481.dkr.ecr.ap-southeast-1.amazonaws.com/frontend:78a4864
        ports:
        - containerPort: 80
