manifests/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prod-frontend
  namespace: my-app
spec:
  selector:
    app: prod-frontend
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
