manifests/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uat-frontend-ingress
  namespace: my-app
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: uat.trongduong.website
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: uat-frontend
            port:
              number: 80
